# Advanced

./: README.md
msqueue.ipc/: CMakeLists.txt  compile.sh  mmsg.h  read  read.cpp  write  write.cpp
msqueue.ipc/lib/: msg_queue.cpp  msg_queue.h
projects/ls/: CMakeLists.txt  main.cpp
projects/ls/inc/: logger.h  ls_command.h  signal_slot.h
projects/ls/src/: logger.cpp  ls_command.cpp  ls_command.h  signal_slot.h
system_programming/: a.out  doc.txt  main.c
system_programming/exercises/: 1.cpp  a.out
system_programming/exercises/1/: 1.txt
system_programming/exercises/2/: main.cpp  out.txt
system_programming/exercises/2/docs/: docs.txt  name.txt  other.json
system_programming/exercises/3/: find  ls  main.cpp
system_programming/exercises/4/: main.cpp
system_programming/exercises/4/txt/: home.txt  rext_rename.txt
system_programming/exercises/5/: main.c  main.cpp
system_programming/theory/creat_open/: file_io.c  r.txt  trunc_file.c
